test_programs/compile_failure/noirc_frontend_tests_imports_no_super/src/main.nr

    use super::some_func;
    